load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "apidef_proto",
    srcs = ["strmap.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "apidef_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "strmap/proto/apidef",
    proto = ":apidef_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":apidef_go_proto"],
    importpath = "strmap/proto/apidef",
    visibility = ["//visibility:public"],
)
