load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["trace.go"],
    deps = ["//vendor/golang.org/x/net/trace:go_default_library",
    "//vendor/google.golang.org/grpc:go_default_library"],
    importpath = "strmap/tracing",
    visibility = ["//visibility:public"],
)
